add a add library modal

--- a/frontend/src/views/HomeView.module.css
+++ b/frontend/src/views/HomeView.module.css
@@ -8,3 +8,13 @@
   align-items: center;
   margin: 2rem;
 }
+
+.addCard {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.addIcon {
+  font-size: 5rem;
+}
