--- a/frontend/src/views/LoginView.module.css
+++ b/frontend/src/views/LoginView.module.css
@@ -1,8 +1,8 @@
 .title {
-  margin: 5rem 20rem;
+  margin: 10vh 30vw;
   text-align: center;
 }
 
 .form {
-  margin: 5rem 20rem;
+  margin: 10vh 30vw;
 }
